# harness-engn

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: config.py  context.py  correction.py  llm.py  memory.py  multi_agent.py  planning_prompts.py  prompts.py
tests/: test_config.py  test_correction.py  test_git_tool.py  test_llm.py  test_main.py  test_main_git.py  test_memory.py  test_multi_agent.py  test_planning.py  test_tools.py
tools/: __init__.py  edit_file.py  forget_fact.py  git_tool.py  list_dir.py  list_facts.py  remember_fact.py  run_command.py  search_files.py  search_grep.py  security.py  view_file.py  write_file.py
